# GearBot-2

./: Cargo.toml
.github/: dependabot.yml
gearbot_2/: Cargo.toml
gearbot_2_api/: Cargo.toml
gearbot_2_lib/: Cargo.toml
