[package]
name = "gearbot_2"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
twilight-http = "0.11"
twilight-gateway = "0.11"
twilight-model = "0.14"
twilight-util = "0.14"
twilight-embed-builder = "0.9"
twilight-mention = "0.14"
gearbot_2_lib = { path = "../gearbot_2_lib" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread", "sync", "time", "parking_lot"], version = "1.26" }
parking_lot = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
prometheus = "0.13"
rdkafka = { version = "0.29", features = ["cmake-build"] }
bincode = "2.0.0-rc.3"
num-format = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"
git-version = "0.3"
serde_json = "1.0"
chrono = "0.4"

# For local testing
#twilight-http = {path="../../twilight/http"}
#twilight-gateway = {path="../../twilight/gateway", features=["tracing"]}
#twilight-model = {path="../../twilight/model"}
#twilight-util = {path="../../twilight/util"}
#twilight-embed-builder = {path="../../twilight/embed-builder"}
#twilight-mention = {path="../../twilight/mention"}