[package]
name = "gearbot_2_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent-bundle = "0.15"
intl-memoizer = "0.5"
unic-langid = "0.9"
tracing = "0.1"
twilight-http = "0.15"
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder", "snowflake"] }
twilight-embed-builder = "0.11"
twilight-validate = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
tokio = "1.35"
uuid = { version = "1.7", features = ["v4"] }
time = "0.3"
aes-gcm = "0.10"
rand = "0.8"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time", "json", "offline"] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"


# for local testing
#twilight-http = {path="../../twilight/http"}
#twilight-model = {path="../../twilight/model"}